--- a/src/ss.Testing.xUnit.Utils/ss.Testing.xUnit.Utils.csproj
+++ b/src/ss.Testing.xUnit.Utils/ss.Testing.xUnit.Utils.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net452;net461</TargetFrameworks>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture.Xunit2" Version="3.51.0" />
