--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,9 +17,6 @@ nuget:
   account_feed: true
 build_script:
 - cmd: dotnet build -c release
-build:
-  publish_nuget: true
-  verbosity: normal
 deploy:
 - provider: NuGet
   api_key:
@@ -27,3 +24,10 @@ deploy:
   skip_symbols: true
   on:
     appveyor_repo_tag: true
+- provider: NuGet
+  server: https://ci.appveyor.com/nuget/sanisoclem-1hsskq6nn06g
+  api_key:
+    secure: ovRAAP+pCt2eBZ5OoCKJaGh4vQbTUAZ8wnbsogY3sYw=
+  skip_symbols: true
+  on:
+    branch: master
