--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,11 @@ dotnet_csproj:
   package_version: '{version}'
   informational_version: '{version}'
 build_script:
-- cmd: dotnet build -c release
+- cmd: dotnet pack -c release
 test_script:
 - cmd: dotnet test
+artifacts:
+- path: src\**\release\*.nupkg
 deploy:
 - provider: NuGet
   api_key:
@@ -21,6 +23,7 @@ deploy:
   skip_symbols: true
   on:
     appveyor_repo_tag: true
+    appveyor_repo_tag_name: /v.+/
 - provider: NuGet
   server: https://ci.appveyor.com/nuget/sanisoclem-1hsskq6nn06g
   api_key:
